<resources>
    <string name="app_name">AplicationRepos</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="back">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="language">Lenguaje</string>
    <string name="name">Nombre</string>
    <string name="search">Buscar</string>
</resources>
